--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "node-cron": "^3.0.3"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.2",
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.9"
   }
 }
