Refactor event handling: update event module structure and improve welcome message functionality

--- a/bot/package.json
+++ b/bot/package.json
@@ -2,6 +2,19 @@
   "dependencies": {
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
-    "node-cron": "^3.0.3"
-  }
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.9"
+  },
+  "name": "bot",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
