--- a/bot/package.json
+++ b/bot/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
-    "node-cron": "^3.0.3",
+    "node-cron": "4.1.0",
     "nodemon": "^3.1.9"
   },
   "name": "bot",
