fix: add mongo dependency for mongo-express service in docker-compose

--- a/backend/mongo-compose.yml
+++ b/backend/mongo-compose.yml
@@ -20,6 +20,8 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${ME_CONFIG_MONGODB_ADMINPASSWORD}
       ME_CONFIG_MONGODB_URL: ${ME_CONFIG_MONGODB_URL}
       ME_CONFIG_BASICAUTH: ${ME_CONFIG_BASICAUTH}
+    depends_on:
+      - mongo
 
 volumes:
   mongo-data:
