--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+# dependencies
+node_modules/
+
+# production
+.next/
+out/
+
+# testing
+coverage/
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.next.cache
+
+# vercel
+.vercel
+
+# vscode
+.vscode
+
 # Node.js
 node_modules/
 npm-debug.log*
@@ -27,7 +55,3 @@ ehthumbs.db
 .env.test
 .env.development
 .env.production
-
-# Optional: Next.js
-.next/
-out/
