--- a/bot/package.json
+++ b/bot/package.json
@@ -14,6 +14,7 @@
     "start": "nodemon index.js"
   },
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": ""
