--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node ./dist/server.js",
+    "dev": "nodemon ./src/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "type": "module",
@@ -18,7 +19,16 @@
     "dotenv": "^16.4.5",
     "express": "5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.9.2"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^24.0.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
