--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/server.js",
-    "dev": "nodemon ./src/server.ts",
+    "dev": "nodemon --exec \"node --import tsx/esm\" ./src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -28,7 +28,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.0.0",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
 }
