--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "passport-discord": "^0.1.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
