Improve dev environment compatibility and performance
Adds legacy watch mode to nodemon scripts for better file watching support across environments. Removes Turbopack from Next.js dev script for stability. Updates Docker Compose to enable polling for file changes and comments out unused volumes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,10 +72,12 @@ services:
       NODE_ENV: development
       NEXT_PUBLIC_BACKEND_URL: ${NEXT_PUBLIC_BACKEND_URL}
       NEXT_PUBLIC_FRONTEND_URL: ${NEXT_PUBLIC_FRONTEND_URL}
+      CHOKIDAR_USEPOLLING: "true"
+      WATCHPACK_POLLING: "true"
     volumes:
       - ./dashboard:/app
       - /app/node_modules
-      - /app/.next
+      # - /app/.next
     depends_on:
       - backend
     networks:
