--- a/bot/package.json
+++ b/bot/package.json
@@ -13,7 +13,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon --legacy-watch index.js"
   },
   "keywords": [],
   "type": "module",
