--- a/bot/package.json
+++ b/bot/package.json
@@ -3,9 +3,9 @@
     "axios": "^1.10.0",
     "commandkit": "^0.1.10",
     "discord.js": "^14.16.3",
-    "dotenv": "^16.4.7",
+    "dotenv": "^17.2.0",
     "mongoose": "^8.15.1",
-    "node-cron": "4.1.0",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.9"
   },
   "name": "bot",
