--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,7 @@ services:
       NODE_ENV: development
       DISCORD_BOT_TOKEN: ${DISCORD_BOT_TOKEN}
       MONGODB_URI: ${MONGODB_URI}
+      ITAD_API_KEY: ${ITAD_API_KEY}
     volumes:
       - ./bot:/app
       - /app/node_modules
