--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "5.1.0",
     "express-session": "^1.18.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "passport": "^0.7.0",
