--- a/bot/package.json
+++ b/bot/package.json
@@ -4,6 +4,7 @@
     "commandkit": "^0.1.10",
     "discord.js": "^14.16.3",
     "dotenv": "^17.2.0",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.15.1",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.9"
