--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "node-cron": "^4.2.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4"
   },
@@ -34,6 +35,7 @@
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.0.0",
+    "@types/node-cron": "^3.0.11",
     "@types/passport": "^1.0.17",
     "@types/passport-discord": "^0.1.14",
     "nodemon": "^3.1.10",
